--- a/.classpath
+++ b/.classpath
@@ -7,45 +7,45 @@
 	<classpathentry output="target/test-classes" kind="src" path="src/test/java"/>
 	<classpathentry output="target/test-classes" kind="src" path="src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry sourcepath="M2_REPO/commons-collections/commons-collections/2.1.1/commons-collections-2.1.1-sources.jar" kind="var" path="M2_REPO/commons-collections/commons-collections/2.1.1/commons-collections-2.1.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/jboss/javassist/3.0/javassist-3.0.jar"/>
-	<classpathentry sourcepath="M2_REPO/log4j/log4j/1.2.8/log4j-1.2.8-sources.jar" kind="var" path="M2_REPO/log4j/log4j/1.2.8/log4j-1.2.8.jar"/>
-	<classpathentry sourcepath="M2_REPO/oro/oro/2.0.8/oro-2.0.8-sources.jar" kind="var" path="M2_REPO/oro/oro/2.0.8/oro-2.0.8.jar"/>
-	<classpathentry sourcepath="M2_REPO/hsqldb/hsqldb/1.8.0.1/hsqldb-1.8.0.1-sources.jar" kind="var" path="M2_REPO/hsqldb/hsqldb/1.8.0.1/hsqldb-1.8.0.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.3/commons-logging-1.0.3.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/openqa/selenium/server/selenium-server/0.8.1/selenium-server-0.8.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/jetty/jasper-runtime/4.2.20RC0/jasper-runtime-4.2.20RC0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/springmodules/springmodules-lucene/1.0-dev-20060328110632/springmodules-lucene-1.0-dev-20060328110632.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/tapestry/tapestry-annotations/4.1.1-SNAPSHOT/tapestry-annotations-4.1.1-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/spring/1.2.8/spring-1.2.8.jar"/>
-	<classpathentry sourcepath="M2_REPO/commons-fileupload/commons-fileupload/1.1/commons-fileupload-1.1-sources.jar" kind="var" path="M2_REPO/commons-fileupload/commons-fileupload/1.1/commons-fileupload-1.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/ognl/ognl/2.6.7/ognl-2.6.7.jar"/>
-	<classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.1/commons-lang-2.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/tapestry/tapestry-framework/4.1.1-SNAPSHOT/tapestry-framework-4.1.1-SNAPSHOT.jar"/>
-	<classpathentry sourcepath="M2_REPO/commons-io/commons-io/1.1/commons-io-1.1-sources.jar" kind="var" path="M2_REPO/commons-io/commons-io/1.1/commons-io-1.1.jar"/>
-	<classpathentry sourcepath="M2_REPO/hibernate/hibernate/2.1.8/hibernate-2.1.8-sources.jar" kind="var" path="M2_REPO/hibernate/hibernate/2.1.8/hibernate-2.1.8.jar"/>
-	<classpathentry sourcepath="M2_REPO/ehcache/ehcache/1.1/ehcache-1.1-sources.jar" kind="var" path="M2_REPO/ehcache/ehcache/1.1/ehcache-1.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/jboss/jboss-j2ee/4.0.2/jboss-j2ee-4.0.2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/junit/junit/3.8/junit-3.8.jar"/>
-	<classpathentry sourcepath="M2_REPO/commons-codec/commons-codec/1.3/commons-codec-1.3-sources.jar" kind="var" path="M2_REPO/commons-codec/commons-codec/1.3/commons-codec-1.3.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/tapestry/tapestry-contrib/4.1.1-SNAPSHOT/tapestry-contrib-4.1.1-SNAPSHOT.jar"/>
 	<classpathentry kind="var" path="M2_REPO/lucene/lucene-core/1.9.1/lucene-core-1.9.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/lucene/lucene-analyzers/1.9.1/lucene-analyzers-1.9.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/hivemind/hivemind-lib/1.1.1/hivemind-lib-1.1.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/hivemind/hivemind/1.1.1/hivemind-1.1.1.jar"/>
-	<classpathentry sourcepath="M2_REPO/commons-beanutils/commons-beanutils/1.7.0/commons-beanutils-1.7.0-sources.jar" kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.7.0/commons-beanutils-1.7.0.jar"/>
-	<classpathentry sourcepath="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1-sources.jar" kind="var" path="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/asm/asm-attrs/1.5.3/asm-attrs-1.5.3.jar"/>
-	<classpathentry sourcepath="M2_REPO/cglib/cglib/2.1_3/cglib-2.1_3-sources.jar" kind="var" path="M2_REPO/cglib/cglib/2.1_3/cglib-2.1_3.jar"/>
-	<classpathentry kind="var" path="M2_REPO/c3p0/c3p0/0.9.0.4/c3p0-0.9.0.4.jar"/>
+	<classpathentry sourcepath="M2_REPO/commons-lang/commons-lang/2.1/commons-lang-2.1-sources.jar" kind="var" path="M2_REPO/commons-lang/commons-lang/2.1/commons-lang-2.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/junit/junit/3.8/junit-3.8.jar"/>
+	<classpathentry sourcepath="M2_REPO/org/apache/tapestry/tapestry-contrib/4.1.1-SNAPSHOT/tapestry-contrib-4.1.1-SNAPSHOT-sources.jar" kind="var" path="M2_REPO/org/apache/tapestry/tapestry-contrib/4.1.1-SNAPSHOT/tapestry-contrib-4.1.1-SNAPSHOT.jar"/>
+	<classpathentry sourcepath="M2_REPO/hibernate/hibernate/2.1.8/hibernate-2.1.8-sources.jar" kind="var" path="M2_REPO/hibernate/hibernate/2.1.8/hibernate-2.1.8.jar"/>
+	<classpathentry sourcepath="M2_REPO/commons-collections/commons-collections/2.1.1/commons-collections-2.1.1-sources.jar" kind="var" path="M2_REPO/commons-collections/commons-collections/2.1.1/commons-collections-2.1.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/asm/asm/1.5.3/asm-1.5.3.jar"/>
+	<classpathentry sourcepath="M2_REPO/commons-io/commons-io/1.1/commons-io-1.1-sources.jar" kind="var" path="M2_REPO/commons-io/commons-io/1.1/commons-io-1.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/ognl/ognl/2.6.7/ognl-2.6.7.jar"/>
+	<classpathentry sourcepath="M2_REPO/org/springframework/spring/1.2.8/spring-1.2.8-sources.jar" kind="var" path="M2_REPO/org/springframework/spring/1.2.8/spring-1.2.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/openqa/selenium/server/selenium-server/0.8.1/selenium-server-0.8.1.jar"/>
+	<classpathentry sourcepath="M2_REPO/commons-codec/commons-codec/1.3/commons-codec-1.3-sources.jar" kind="var" path="M2_REPO/commons-codec/commons-codec/1.3/commons-codec-1.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/c3p0/c3p0/0.9.0.4/c3p0-0.9.0.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/hivemind/hivemind-lib/1.1.1/hivemind-lib-1.1.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-mock/1.2.8/spring-mock-1.2.8.jar"/>
-	<classpathentry kind="var" path="M2_REPO/lucene/lucene-highlighter/1.9.1/lucene-highlighter-1.9.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/jboss/jboss-j2ee/4.0.2/jboss-j2ee-4.0.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.3/commons-logging-1.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/asm/asm-attrs/1.5.3/asm-attrs-1.5.3.jar"/>
+	<classpathentry sourcepath="M2_REPO/ehcache/ehcache/1.1/ehcache-1.1-sources.jar" kind="var" path="M2_REPO/ehcache/ehcache/1.1/ehcache-1.1.jar"/>
+	<classpathentry sourcepath="M2_REPO/org/apache/tapestry/tapestry-framework/4.1.1-SNAPSHOT/tapestry-framework-4.1.1-SNAPSHOT-sources.jar" kind="var" path="M2_REPO/org/apache/tapestry/tapestry-framework/4.1.1-SNAPSHOT/tapestry-framework-4.1.1-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/jetty/jasper-runtime/4.2.20RC0/jasper-runtime-4.2.20RC0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/javax/transaction/jta/1.0.1B/jta-1.0.1B.jar"/>
-	<classpathentry kind="var" path="M2_REPO/jetty/org.mortbay.jetty/5.1.10/org.mortbay.jetty-5.1.10.jar"/>
-	<classpathentry kind="var" path="M2_REPO/jetty/jasper-compiler/4.2.20RC0/jasper-compiler-4.2.20RC0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/lucene/lucene-analyzers/1.9.1/lucene-analyzers-1.9.1.jar"/>
+	<classpathentry sourcepath="M2_REPO/commons-fileupload/commons-fileupload/1.1/commons-fileupload-1.1-sources.jar" kind="var" path="M2_REPO/commons-fileupload/commons-fileupload/1.1/commons-fileupload-1.1.jar"/>
+	<classpathentry sourcepath="M2_REPO/javax/servlet/servlet-api/2.3/servlet-api-2.3-sources.jar" kind="var" path="M2_REPO/javax/servlet/servlet-api/2.3/servlet-api-2.3.jar"/>
+	<classpathentry sourcepath="M2_REPO/log4j/log4j/1.2.8/log4j-1.2.8-sources.jar" kind="var" path="M2_REPO/log4j/log4j/1.2.8/log4j-1.2.8.jar"/>
+	<classpathentry sourcepath="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1-sources.jar" kind="var" path="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/springmodules/springmodules-lucene/1.0-dev-20060328110632/springmodules-lucene-1.0-dev-20060328110632.jar"/>
+	<classpathentry kind="var" path="M2_REPO/hivemind/hivemind/1.1.1/hivemind-1.1.1.jar"/>
 	<classpathentry sourcepath="M2_REPO/org/hibernate/hibernate/3.1.3/hibernate-3.1.3-sources.jar" kind="var" path="M2_REPO/org/hibernate/hibernate/3.1.3/hibernate-3.1.3.jar"/>
 	<classpathentry sourcepath="M2_REPO/antlr/antlr/2.7.6/antlr-2.7.6-sources.jar" kind="var" path="M2_REPO/antlr/antlr/2.7.6/antlr-2.7.6.jar"/>
-	<classpathentry sourcepath="M2_REPO/javax/servlet/servlet-api/2.3/servlet-api-2.3-sources.jar" kind="var" path="M2_REPO/javax/servlet/servlet-api/2.3/servlet-api-2.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/jboss/javassist/3.0/javassist-3.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/lucene/lucene-highlighter/1.9.1/lucene-highlighter-1.9.1.jar"/>
+	<classpathentry sourcepath="M2_REPO/oro/oro/2.0.8/oro-2.0.8-sources.jar" kind="var" path="M2_REPO/oro/oro/2.0.8/oro-2.0.8.jar"/>
+	<classpathentry sourcepath="M2_REPO/commons-beanutils/commons-beanutils/1.7.0/commons-beanutils-1.7.0-sources.jar" kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.7.0/commons-beanutils-1.7.0.jar"/>
+	<classpathentry sourcepath="M2_REPO/hsqldb/hsqldb/1.8.0.1/hsqldb-1.8.0.1-sources.jar" kind="var" path="M2_REPO/hsqldb/hsqldb/1.8.0.1/hsqldb-1.8.0.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/jetty/org.mortbay.jetty/5.1.10/org.mortbay.jetty-5.1.10.jar"/>
+	<classpathentry kind="var" path="M2_REPO/jetty/jasper-compiler/4.2.20RC0/jasper-compiler-4.2.20RC0.jar"/>
+	<classpathentry sourcepath="M2_REPO/cglib/cglib/2.1_3/cglib-2.1_3-sources.jar" kind="var" path="M2_REPO/cglib/cglib/2.1_3/cglib-2.1_3.jar"/>
+	<classpathentry sourcepath="M2_REPO/org/apache/tapestry/tapestry-annotations/4.1.1-SNAPSHOT/tapestry-annotations-4.1.1-SNAPSHOT-sources.jar" kind="var" path="M2_REPO/org/apache/tapestry/tapestry-annotations/4.1.1-SNAPSHOT/tapestry-annotations-4.1.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
