--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com.bjmaxinfo.corner</groupId>
 	<artifactId>corner</artifactId>
 	<name>corner</name>
-	<version>2.1.1</version>
+	<version>2.2</version>
 	<packaging>jar</packaging>
 	<description>Provides some core function</description>
 
@@ -45,11 +45,10 @@
                 <targetPath>dojo</targetPath>
             </resource> -->
             <resource>
-                <directory>src/main/js/corner</directory>
+                <directory>src/main/js</directory>
                 <includes>
-                    <include>**/*</include>
+                    <include>corner/**/*</include>
                 </includes>
-                <targetPath>corner</targetPath>
             </resource>
         </resources>
 		<plugins>
@@ -60,6 +59,7 @@
 					<grammars>
 						/corner/orm/hibernate/expression/grammer/query-expression.g,
 						/corner/expression/calc/calc.g</grammars>
+					<outputDirectory>${basedir}/src/main/antlr</outputDirectory>	
 				</configuration>
 				<executions>
 					<execution>
@@ -69,128 +69,37 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>hibernate3-maven-plugin</artifactId>
-                <configuration>
-                    <hibernate>
-                        <configurationFile>/src/test/resources/hibernate.cfg.xml</configurationFile>
-                    </hibernate>
-                </configuration>
-            </plugin -->
 			<plugin>
-				<groupId>xdoclet</groupId>
-				<artifactId>maven2-xdoclet2-plugin</artifactId>
-				<version>2.0.5-SNAPSHOT</version>
-				<configuration>
-					<configs>
-						<config>
-
-							<plugin>
-								org.xdoclet.plugin.hibernate.HibernateMappingPlugin</plugin>
-							<params>
-								<version>3.0</version>
-
-								<destdir>${basedir}/src/test/resources</destdir>
-
-							</params>
-							<addToSources>false</addToSources>
-							<includes>corner/demo/**/*.java</includes>
-						</config>
-
-						<config>
-
-							<plugin>
-								corner.xdoclet.TapestryPageFormConfigPlugin</plugin>
-							<params>
-								<version>3.0</version>
-								<packageregex>corner.demo.model</packageregex>
-								<packagereplace>tapestry</packagereplace>
-								<destdir>${basedir}/src/main/webapp/generates</destdir>
-							</params>
-							<addToSources>false</addToSources>
-							<includes>corner/demo/**/*.java</includes>
-						</config>
-						<config>
-							<plugin>
-								corner.xdoclet.TapestryPageListConfigPlugin</plugin>
-							<params>
-								<version>3.0</version>
-								<packageregex>corner.demo.model</packageregex>
-								<packagereplace>tapestry</packagereplace>
-								<destdir>${basedir}/src/main/webapp/generates</destdir>
-							</params>
-							<addToSources>false</addToSources>
-							<includes>corner/demo/**/*.java</includes>
-						</config>
-						<config>
-							<plugin>
-								corner.xdoclet.TapestryHtmlFormPlugin</plugin>
-							<params>
-								<version>3.0</version>
-								<packageregex>corner.demo.model</packageregex>
-								<packagereplace>tapestry</packagereplace>
-								<destdir>${basedir}/src/main/webapp/generates</destdir>
-							</params>
-							<addToSources>false</addToSources>
-							<includes>corner/demo/**/*.java</includes>
-						</config>
-						<config>
-							<plugin>
-								corner.xdoclet.TapestryHtmlListPlugin</plugin>
-							<params>
-								<version>3.0</version>
-								<packageregex>corner.demo.model</packageregex>
-								<packagereplace>tapestry</packagereplace>
-								<destdir>${basedir}/src/main/webapp/generates</destdir>
-							</params>
-							<addToSources>false</addToSources>
-							<includes>corner/demo/**/*.java</includes>
-						</config>
-					</configs>
-
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>xdoclet-plugins</groupId>
-						<artifactId>xdoclet-plugin-hibernate</artifactId>
-						<version>1.0.2</version>
-					</dependency>
-					<dependency>
-						<groupId>xdoclet-plugins</groupId>
-						<artifactId>xdoclet-plugin-qtags</artifactId>
-						<version>1.0.2</version>
-					</dependency>
-					<dependency>
-						<groupId>com.bjmaxinfo.corner</groupId>
-						<artifactId>corner-xdoclet</artifactId>
-						<version>2.0.2</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<goals>
-							<goal>xdoclet</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.0</version>
+		</plugin>
 		</plugins>
 		<extensions>
-      <extension>
-        <groupId>hsqldb</groupId>
-        <artifactId>hsqldb</artifactId>
-        <version>1.8.0.1</version>
-      </extension>
+	      <extension>
+	        <groupId>hsqldb</groupId>
+	        <artifactId>hsqldb</artifactId>
+	        <version>1.8.0.1</version>
+	      </extension>
 
-    </extensions>
+    	</extensions>
 	</build>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>central</id>
 			<name>bjmaxifo</name>
-			<url>http://dev.bjmaxinfo.com/maven2/repository</url>
+			<url>http://downloads.planetmirror.com/pub/maven2</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</pluginRepository>
+		<pluginRepository>
+			<id>codehaus</id>
+			<name>codehaus</name>
+			<url>http://repository.codehaus.org</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -199,12 +108,30 @@
 			</releases>
 
 		</pluginRepository>
+		<pluginRepository>
+            <id>tapestry.javaforge</id>
+            <url>http://howardlewisship.com/repository</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>apache.snapshots</id>
+            <url>http://people.apache.org/repo/m2-snapshot-repository</url>
+        </pluginRepository>
+		 <pluginRepository>
+		    <id>Codehaus Snapshots</id>
+		    <url>http://snapshots.repository.codehaus.org/</url>
+		    <snapshots>
+		      <enabled>true</enabled>
+		    </snapshots>
+		    <releases>
+		      <enabled>false</enabled>
+		    </releases>
+		  </pluginRepository>
 	</pluginRepositories>
 	<repositories>
 		<repository>
 			<id>central</id>
 			<name>bjmaxinfo</name>
-			<url>http://dev.bjmaxinfo.com/maven2/repository</url>
+			<url>http://downloads.planetmirror.com/pub/maven2</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -213,9 +140,18 @@
 			</releases>
 		</repository>
 		<repository>
-        <id>apache.snapshots</id>
-        <url>http://people.apache.org/repo/m2-snapshot-repository</url>
-    </repository>
+			<id>bjmaxinfo-repo</id>
+			<name>bjmaxinfo</name>
+			<url>http://downloads.planetmirror.com/pub/maven2</url>
+		</repository>
+		<repository>
+            <id>tapestry.javaforge</id>
+            <url>http://howardlewisship.com/repository</url>
+        </repository>
+        <repository>
+            <id>apache.snapshots</id>
+            <url>http://people.apache.org/repo/m2-snapshot-repository</url>
+        </repository>
 	</repositories>
 	<dependencies>
 		<dependency>
@@ -254,18 +190,10 @@
 			<version>1.9.1</version>
 			<optional>true</optional>
 		</dependency>
-
-		<dependency>
-			<groupId>hibernate</groupId>
-			<artifactId>hibernate</artifactId>
-			<version>2.1.8</version>
-			<optional>true</optional>
-		</dependency>
 		<dependency>
 			<groupId>antlr</groupId>
 			<artifactId>antlr</artifactId>
 			<version>2.7.6</version>
-
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -312,9 +240,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-annotations</artifactId>
+			<version>3.2.0.cr1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate</artifactId>
-			<version>3.1.3</version>
-
+			<version>3.2.0.cr2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>ejb</artifactId>
+			<version>3.0-public-draft-20060502</version>
 		</dependency>
 		<!-- for test -->
 		
@@ -337,7 +274,31 @@
 			<version>0.8.1</version>
 			<optional>true</optional>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>5.1</version>
+			<classifier>jdk15</classifier>
+			<scope>test</scope>
+			<exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
+		</dependency>
+		<dependency>
+            <groupId>org.apache.tapestry</groupId>
+            <artifactId>tapestry-test</artifactId>
+            <version>4.1.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+            <groupId>com.javaforge.tapestry</groupId>
+            <artifactId>tapestry-testng</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
 		
 		
 		<dependency>
@@ -364,7 +325,6 @@
 			<version>4.2.20RC0</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 	<distributionManagement>
 		<site>
