--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 #for database
 config.import.database=classpath:/database/hsql.properties
 #for hibernate
-hibernate.mapping.locations=classpath:/corner/demo/model
+hibernate.mapping.locations=classpath:/corner/demo/model/
 
