--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -10,3 +10,4 @@ log4j.logger.org.mortbay=WARN
 log4j.logger.corner=DEBUG
 log4j.logger.com.bjmaxinfo=DEBUG
 log4j.logger.org.springframework.jdbc.support.lob=DEBUG
+log4j.logger.org.hibernate=INFO
