--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,10 +1,11 @@
-#Tue Sep 19 12:30:06 CST 2006
+#Fri Sep 22 13:13:44 CST 2006
 eclipse.preferences.version=1
 encoding//src/main/webapp/many2many/ABList.page=UTF-8
 encoding//src/main/webapp/many2many2/ABForm.page=UTF-8
 encoding//src/main/webapp/many2many2/ABList.page=UTF-8
 encoding//src/main/webapp/one/AForm.page=UTF-8
 encoding//src/main/webapp/one/AList.page=UTF-8
+encoding//src/main/webapp/one2many/AForm.page=UTF-8
 encoding//support/build.properties=UTF-8
 encoding/<project>=UTF-8
 encoding/build.properties=UTF-8
