--- a/ivy.xml
+++ b/ivy.xml
@@ -34,6 +34,7 @@
 		<dependency org="javassist" name="javassist" rev="3.0" conf="runtime->*"/>
 		<dependency org="apache" name="commons-codec" rev="1.3" conf="runtime->*"/>
 		<dependency org="apache" name="commons-io" rev="1.1" conf="runtime->*"/>
+		<dependency org="apache" name="commons-fileupload" rev="1.1.1" conf="runtime->*"/>
 		
 				
 		<dependency org="springmodules" name="springmodules-lucene"		rev="1.0-dev-20060328110632" conf="compile->*"/>
